# gemini-audio-upload

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
gemini_audio/: analyze_audio.py  mcp_server.py
